backend-v2/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hodlfun-ingress
  namespace: hodlfun
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "hodlfun-ip"
    networking.gke.io/managed-certificates: "hodlfun-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: api.hodl.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
    - host: ws.hodl.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: websocket
                port:
                  number: 80
